<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/navHeaderImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:paddingTop='8dp'
        android:layout_marginStart="16dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/navHeaderName"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nav_header_title"
        android:paddingTop="16dp" />

    <TextView
        android:id="@+id/navHeaderDesc"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>